[package]
name = "solana-sdk"
description = "Solana SDK"
documentation = "https://docs.rs/solana-sdk"
readme = "README.md"
version = "2.1.0"
rust-version = "1.88.0"
edition = "2021"

[features]
# "program" feature is a legacy feature retained to support v1.3 and older
# programs.  New development should not use this feature.  Instead use the
# solana-program crate
program = []

default = [
    "borsh",
    "full",  # functionality that is not compatible or needed for on-chain programs
]
full = [
    "byteorder",
    "chrono",
    "memmap2",
    "serde_json",
    "solana-signature",
    "ed25519-dalek",
    "ed25519-dalek-bip32",
    "libsecp256k1",
    "sha3",
    "digest",
    "dep:solana-precompile-error",
    "dep:solana-transaction-error"
]
borsh = ["dep:borsh", "solana-program/borsh", "solana-secp256k1-recover/borsh"]
dev-context-only-utils = ["qualifier_attr", "solana-account/dev-context-only-utils"]
frozen-abi = [
    "dep:solana-frozen-abi",
    "dep:solana-frozen-abi-macro",
    "solana-feature-set/frozen-abi",
    "solana-account/frozen-abi",
    "solana-inflation/frozen-abi",
    "solana-program/frozen-abi",
    "solana-short-vec/frozen-abi",
    "solana-signature/frozen-abi",
    "solana-transaction-error/frozen-abi"
]

[dependencies]
bincode = "1.3.3"
bitflags = { version = "2.6.0",features = ["serde"] }
borsh = { version = "1.5.1", features = ["derive", "unstable__schema"] ,optional = true }
bs58 = { version = "0.5.1", default-features = false }
bytemuck = "1.19.0"
bytemuck_derive = "1.8.0"
byteorder = { version = "1.5.0",optional = true }
chrono = { version = "0.4.38", default-features = false ,features = ["alloc"], optional = true }
curve25519-dalek = { version = "4.1.3", features = ["digest", "rand_core"] ,optional = true }
digest = { version = "0.10.7",optional = true }
ed25519-dalek = { version = "=1.0.1",optional = true }
ed25519-dalek-bip32 = { version = "0.2.0",optional = true }
generic-array = { version = "0.14.7",features = [
    "serde",
    "more_lengths",
], optional = true }
hmac = "0.12.1"
itertools = "0.12.1"
lazy_static = "1.5.0"
libsecp256k1 = { version = "0.6.0",optional = true, features = ["hmac"] }
log = "0.4.22"
memmap2 = { version = "0.5.10",optional = true }
num-derive = "0.4"
num-traits = "0.2"
num_enum = "0.7.3"
pbkdf2 = { version = "0.11.0", default-features = false }
qualifier_attr = { version = "0.2.2", default-features = false, optional = true }
serde = "1.0.213"
serde_bytes = "0.11.15"
serde_derive = "1.0.213"
serde_json = { version = "1.0.132", optional = true }
serde_with = { version = "3.11.0", features = ["macros"] }
sha2 = "0.10.8"
sha3 = { version = "0.10.8", optional = true }
siphasher = "0.3.11"
solana-account = { version = "=2.1.0", features = ["bincode"] }
solana-bn254 = "=2.1.0"
solana-decode-error = "=2.1.0"
solana-derivation-path = "=2.1.0"
solana-feature-set = "=2.1.0"
solana-frozen-abi = { version = "=2.1.0", optional = true, features = [
    "frozen-abi",
] }
solana-frozen-abi-macro = { version = "=2.1.0", optional = true, features = [
    "frozen-abi",
] }
solana-inflation = { version = "=2.1.0", features = ["serde"] }
solana-instruction = "=2.1.0"
solana-native-token = "=2.1.0"
solana-packet = { version = "=2.1.0", features = ["bincode", "serde"] }
solana-precompile-error = { version = "=2.1.0",optional = true }
solana-program = { path = "solana-program" }
solana-program-memory = "=2.1.0"
solana-pubkey = { version = "=2.1.0", default-features = false, features = ["std"] }
solana-sanitize = "=2.1.0"
solana-sdk-macro = "=2.1.0"
solana-secp256k1-recover = "=2.1.0"
solana-serde-varint = "=2.1.0"
solana-short-vec = "=2.1.0"
solana-signature = { version = "=2.1.0",features = [
    "serde",
    "std",
    "verify",
], optional = true }
solana-transaction-error = { version = "=2.1.0",features = ["serde"], optional = true }
thiserror = "1.0.65"
getrandom = { version = "0.1.16", default-features = false, features = ["dummy"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.1", features = ["wasm-bindgen"] }
js-sys = "0.3.72"
wasm-bindgen = "0.2"

[patch.crates-io]
solana-program = { path = "solana-program" }
